frontend/test/should_pass/exact_006.grg
exact rule r {
	pattern {
		x:Node --> y:Node;
		y --> y;
		y --> y;
		z:Node;
	}
	modify {
	}
}

