frontend/test/should_fail/ret_005.grg
rule r : (Node, Node) {
	x: Node;
	y: Node;

	modify {
		return(x, y, x);
	}
}

